feat: object detection using ml5.js

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,12 +26,12 @@ import Link from "../components/Link.astro";
         body="Supercharge your project with new frameworks and libraries."
       />
       <Card
-        href="https://astro.build/themes/"
+        href="/upload-video"
         title="Upload Video"
         body="Explore a galaxy of community-built starter themes."
       />
       <Card
-        href="https://astro.build/chat/"
+        href="/livestream"
         title="Livestream"
         body="Come say hi to our amazing Discord community. ❤️"
       />
